# permitter

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  check.yml
permitter_codegen/: Cargo.toml
permitter_codegen/src/: main.rs
permitter_common/: Cargo.toml
permitter_fetch/: Cargo.toml
permitter_fetch/src/: main.rs
resources/: licenses.json  preview.tape
src/: codegen.rs  main.rs  types.rs
tests/: integration.rs
