[package]
name = "permitter"
version = "3.0.0"
authors = ["Adam Perkowski <adas1per@protonmail.com>", "Raphaël Thériault <raphael_theriault@outlook.com>"]
license = "MIT"
description = "write licenses to stdout. a fork of licensor."
homepage = "https://github.com/adamperkowski/permitter"
repository = "https://github.com/adamperkowski/permitter.git"
readme = "README.md"
keywords = [
    "license",
    "cli",
    "spdx",
    "licensing",
]
categories = ["command-line-utilities"]
edition = "2018"

[workspace]
members = [
    "permitter_codegen",
    "permitter_common",
    "permitter_fetch"
]

[dependencies]
calm_io = "0.1.1"
chrono = "0.4.9"
phf = "0.7.24"
structopt = "0.3.5"
textwrap = "0.11.0"
[dependencies.flate2]
version = "1.0.13"
default-features = false
features = ["rust_backend"]

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.2"
[dev-dependencies.cargo-husky]
version = "1.4.0"
default-features = false
features = [
    "run-for-all",
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-clippy",
    "run-cargo-fmt",
]
