[package]
name = "permitter_fetch"
version = "0.2.0"
authors = ["Adam Perkowski <adas1per@protonmail.com>", "Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"

[dependencies]
flate2 = "1.0.13"
permitter_common = { path = "../permitter_common" }
reqwest = "0.9.22"
sha3 = "0.8.2"
tar = "0.4.26"
